# gamut

./: .convco  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  lefthook.yml  mise.toml  release-plz.toml  rust-toolchain.toml
crates/gamut/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-av1/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-av1/benches/: encode.rs
crates/gamut-av1/src/: cdf.rs  encoder.rs  filter.rs  headers.rs  lib.rs  quant.rs  tile.rs  transform.rs
crates/gamut-av1/src/quant/: tables.rs
crates/gamut-av1/tests/: recon_dav1d.rs
crates/gamut-av2/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-av2/src/: lib.rs
crates/gamut-avif/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-avif/benches/: encode.rs
crates/gamut-avif/src/: encoder.rs  lib.rs
crates/gamut-avif/tests/: decode_roundtrip.rs
crates/gamut-bitstream/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-bitstream/benches/: entropy.rs  symbol.rs
crates/gamut-bitstream/src/: bitwriter.rs  leb128.rs  lib.rs  samplepack.rs  symbol.rs
crates/gamut-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/gamut-cli/src/: error.rs  input.rs  main.rs
crates/gamut-cli/src/commands/: av1.rs  bitstream.rs  color.rs  convert.rs  dsp.rs  mod.rs
crates/gamut-color/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-color/benches/: color.rs
crates/gamut-color/src/: cicp.rs  format.rs  gamut_map.rs  lib.rs  linalg.rs  matrix.rs  oklab.rs  pixel.rs  planar.rs  profile.rs  transfer.rs  ycbcr.rs
crates/gamut-core/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-core/src/: image.rs  lib.rs  luminance.rs  pixel.rs
crates/gamut-deflate/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-deflate/src/: adler32.rs  bitwriter.rs  block.rs  dynamic.rs  encoder.rs  huffman.rs  lib.rs  lz77.rs  symbols.rs  zlib.rs
crates/gamut-deflate/tests/: oracle.rs
crates/gamut-dng/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-dng/src/: bitpack.rs  compression.rs  decoder.rs  encoder.rs  lib.rs  lossless_jpeg.rs  metadata.rs  preview.rs  profile.rs  raw.rs  tags.rs  values.rs  writer.rs
crates/gamut-dng/tests/: adobe_oracle.rs  libtiff_oracle.rs  roundtrip.rs
crates/gamut-dng/tests/common/: mod.rs
crates/gamut-dsp/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-dsp/benches/: transforms.rs  wht.rs
crates/gamut-dsp/src/: adst.rs  butterfly.rs  dct.rs  identity.rs  lib.rs  math.rs  mulaw.rs  wht.rs
crates/gamut-exif/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-exif/src/: exif.rs  gps.rs  lib.rs  makernote.rs  reader.rs  tags.rs  value.rs  writer.rs
crates/gamut-ffi/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-ffi/src/: lib.rs
crates/gamut-heic/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-heic/src/: lib.rs
crates/gamut-icc/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-icc/src/: header.rs  lib.rs  profile.rs  reader.rs  tag_types.rs  tags.rs  writer.rs
crates/gamut-ifd/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-ifd/benches/: ifd.rs
crates/gamut-ifd/src/: byte_order.rs  entry.rs  lib.rs  reader.rs  types.rs  value.rs  writer.rs
crates/gamut-iptc/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-iptc/src/: iim.rs  irb.rs  lib.rs  photo_metadata.rs  reader.rs  reconcile.rs  writer.rs
crates/gamut-isobmff/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-isobmff/benches/: container.rs
crates/gamut-isobmff/src/: boxes.rs  lib.rs  model.rs  reader.rs  writer.rs
crates/gamut-isobmff/tests/: reader.rs  roundtrip.rs  structure.rs
crates/gamut-jxl/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-jxl/src/: lib.rs
crates/gamut-metadata/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-metadata/src/: embed.rs  extract.rs  lib.rs  metadata.rs  source.rs
crates/gamut-png/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-png/src/: ancillary.rs  chunk.rs  color.rs  crc32.rs  encoder.rs  filter.rs  ihdr.rs  lib.rs  pack.rs  palette.rs  reduce.rs
crates/gamut-png/tests/: oracle.rs
crates/gamut-riff/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-riff/benches/: container.rs
crates/gamut-riff/src/: chunk.rs  fourcc.rs  lib.rs  reader.rs  webp.rs  writer.rs
crates/gamut-tiff/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-tiff/benches/: codec.rs
crates/gamut-tiff/src/: decoder.rs  encoder.rs  ifd.rs  lib.rs  palette.rs  reader.rs  tags.rs  writer.rs
crates/gamut-tiff/src/compression/: lzw.rs  mod.rs  packbits.rs  predictor.rs
crates/gamut-tiff/tests/: bigtiff.rs  bilevel.rs  cmyk.rs  decoder_validation.rs  encoder_options.rs  group4.rs  image_roundtrip.rs  lzw.rs  modified_huffman.rs  multipage.rs  oracle.rs  packbits.rs  palette.rs  predictor.rs  rgba.rs  robustness.rs  structure.rs  tiles.rs
crates/gamut-tonemap/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-tonemap/benches/: tonemap.rs
crates/gamut-tonemap/src/: constants.rs  curve.rs  lib.rs  operators.rs
crates/gamut-vvc/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-vvc/src/: lib.rs
crates/gamut-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/gamut-wasm/src/: lib.rs
crates/gamut-webp/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-webp/benches/: codec.rs
crates/gamut-webp/src/: alpha.rs  config.rs  decoder.rs  encoder.rs  lib.rs
crates/gamut-webp/src/vp8/: bool_coder.rs  frame.rs  header.rs  loop_filter.rs  mod.rs  prediction.rs  quant.rs  tokens.rs  transform.rs
crates/gamut-webp/src/vp8l/: bit_io.rs  color_cache.rs  decoder.rs  encoder.rs  (+5 more)
crates/gamut-webp/tests/: oracle.rs  robustness.rs  robustness_vp8l.rs
crates/gamut-xmp/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
crates/gamut-xmp/src/: lib.rs  model.rs  namespace.rs  packet.rs  reader.rs  writer.rs
crates/gamut/src/: lib.rs
tooling/dav1d-oracle/: Cargo.toml  build.rs  wrapper.h
tooling/dav1d-oracle/src/: lib.rs
(+56 files in other folders)
