[package]
name = "gamut-av1"
description = "AV1 still-image (intra-frame) encoder — the standalone codec layer beneath AVIF."
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
