[package]
name = "gamut-av1"
description = "AV1 still-image (intra-frame) encoder — the standalone codec layer beneath AVIF."
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true

[dev-dependencies]
# dav1d as the bit-exact reconstruction oracle (FFI to a vendored, statically-linked
# libdav1d). Dev-only: the shipped library is C-free and needs no decoder. Building
# these tests requires meson/ninja/nasm and the `third_party/dav1d` submodule.
dav1d-oracle = { path = "../../tooling/dav1d-oracle" }
divan.workspace = true

[[bench]]
name = "encode"
harness = false
