[package]
name = "gamut-av2"
description = "AV2 image encoder and decoder (intra-frame still-image coding from AOMedia Video 2, AV1's successor)."
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
