[package]
name = "gamut-avif"
description = "AVIF (AV1 Image File Format) encoder and decoder."
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-av1.workspace = true
gamut-isobmff.workspace = true
