[package]
name = "gamut-avif"
description = "AVIF image encoder — AV1 still frames wrapped in an ISOBMFF container (the full .avif format)."
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-av1.workspace = true
gamut-isobmff.workspace = true

[dev-dependencies]
# libavif as the end-to-end container oracle (FFI to a vendored, statically-linked
# libavif with a vendored dav1d backend). Dev-only: the shipped library is C-free.
# Building these tests requires cmake/meson/ninja/nasm and the `third_party/libavif`
# + `third_party/dav1d` submodules.
libavif-oracle = { path = "../../tooling/libavif-oracle" }
