[package]
name = "gamut-cli"
description = "Sandbox CLI for the gamut codecs: decode PNG/JPEG/PPM and encode AVIF, plus inspection of the shared color/dsp/bitstream primitives (e.g. `gamut convert input.png output.avif`)."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# The crate is `gamut-cli` (so `cargo install gamut-cli`), but it ships a `gamut` binary.
[[bin]]
name = "gamut"
path = "src/main.rs"

[dependencies]
# `all` pulls in the format codecs plus the `primitives` re-exports (color/dsp/bitstream).
gamut = { workspace = true, features = ["all"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
# Decode-only: read PNG/JPEG/PPM inputs. Encoding stays entirely in the gamut crates.
image.workspace = true
