[package]
name = "gamut-color"
description = "Color spaces, pixel formats, bit depths, chroma subsampling, and transfer characteristics for gamut."
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "color"
harness = false
