[package]
name = "gamut-core"
description = "Core traits, image buffers, dimensions, and error types shared across the gamut image codecs."
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
