[package]
name = "gamut-dsp"
description = "Shared SIMD-optimized DSP routines (DCT, wavelet transforms, quantization, filtering) for gamut codecs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
