[package]
name = "gamut-dsp"
description = "Shared SIMD-optimized DSP routines (DCT, wavelet transforms, quantization, filtering) for gamut codecs."
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
