[package]
name = "gamut-icc"
description = "ICC color profile (ICC.1:2022) parser and serializer — header, tag table, and tag element types — for gamut image metadata."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
