[package]
name = "gamut-ifd"
description = "TIFF Image File Directory (IFD) container core — byte order, field types, and IFD read/write — shared by the TIFF codec and EXIF metadata."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
# BigTIFF (`references/tiff/bigtiff.html`): 64-bit offsets/counts and the `Long8`/`SLong8`/`Ifd8`
# field types. Additive — off by default so classic-only consumers (e.g. gamut-exif) stay lean;
# gamut-tiff enables it. See `STATUS.md` (P8).
bigtiff = []

[dependencies]
gamut-core.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "ifd"
harness = false
