[package]
name = "gamut-metadata"
description = "Unified image-metadata facade over gamut's EXIF, XMP, ICC, and IPTC crates — extract from and embed into container metadata blocks."
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-exif.workspace = true
gamut-xmp.workspace = true
gamut-icc.workspace = true
gamut-iptc.workspace = true
