[package]
name = "gamut-riff"
description = "Resource Interchange File Format (RIFF) container utilities, used by the WebP container."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-bitstream.workspace = true
