[package]
name = "gamut-tiff"
description = "TIFF 6.0 (Tagged Image File Format) image encoder and decoder."
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
# The IFD container core (byte order, field types, IFD chain, two-pass offset writer). `bigtiff`
# enables the 64-bit BigTIFF variant the codec writes/reads.
gamut-ifd = { workspace = true, features = ["bigtiff"] }

[dev-dependencies]
# Differential cross-check oracle: a vendored, statically-linked libtiff (built from the
# `third_party/libtiff` submodule). Dev-only and excluded from the workspace.
libtiff-oracle = { path = "../../tooling/libtiff-oracle" }
divan.workspace = true

[[bench]]
name = "codec"
harness = false
