[package]
name = "gamut-tonemap"
description = "Tone-mapping math primitives: built-in tone curves plus an extensible trait for custom operators."
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true

[dev-dependencies]
divan.workspace = true
# Test-only: cross-check the Reinhard operator against gamut-color's bt2020_pq_to_sdr step. Not a
# runtime dependency — a curve stays a pure f32->f32 map.
gamut-color.workspace = true

[[bench]]
name = "tonemap"
harness = false
