[package]
name = "gamut-vvc"
description = "VVC (H.266) image encoder and decoder."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
