[package]
name = "gamut-webp"
description = "WebP image encoder and decoder (intra-frame VP8/VP8L still images in a RIFF container)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
gamut-riff.workspace = true

[dev-dependencies]
# libwebp as the differential-test oracle (FFI). Dev-only: the shipped library is C-free.
libwebp-sys2.workspace = true
