[package]
name = "gamut-webp"
description = "WebP image encoder and decoder (intra-frame VP8/VP8L still images in a RIFF container)."
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true
gamut-color.workspace = true
gamut-dsp.workspace = true
gamut-bitstream.workspace = true
gamut-riff.workspace = true

[dev-dependencies]
# libwebp as the differential-test oracle (FFI). Dev-only: the shipped library is C-free.
libwebp-sys2.workspace = true
# Used by the lossy oracle tests to build YUV inputs and wrap raw VP8 bitstreams.
gamut-color.workspace = true
gamut-riff.workspace = true
divan.workspace = true

[[bench]]
name = "codec"
harness = false
